<resources>
    <string name="app_name">lab1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="start">Start</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

    <string name="about_developer">I am Volodymyr Bohdan. I am 20. My group is KI-192</string>

    <string-array name="levels">
        <item>Low</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="number0">0</string>

    <string name="dashed">----</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="winMessage">You win!</string>
    <string name="back">Go back!</string>

</resources>