<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/back"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/results" />

    <ListView
        android:id="@+id/results"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginBottom="50dp"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"
        android:divider="@color/orange"
        android:dividerHeight="2dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/first">
    </ListView>

    <TextView
        android:id="@+id/first"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/dashed"
        android:textSize="20dp"
        android:layout_toRightOf="@id/number1"
        android:layout_above="@id/number1">
    </TextView>

    <TextView
        android:id="@+id/second"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/dashed"
        android:textSize="20dp"
        android:layout_toRightOf="@id/first"
        android:layout_above="@id/number1">
    </TextView>

    <TextView
        android:id="@+id/third"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/dashed"
        android:textSize="20dp"
        android:layout_toRightOf="@id/second"
        android:layout_above="@id/number1" >
    </TextView>

    <TextView
        android:id="@+id/fourth"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/dashed"
        android:textSize="20dp"
        android:layout_toRightOf="@id/third"
        android:layout_above="@id/number1">
    </TextView>

    <TextView
        android:id="@+id/fifth"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/dashed"
        android:textSize="20dp"
        android:layout_toRightOf="@id/fourth"
        android:layout_above="@id/number1">
    </TextView>

    <TextView
        android:id="@+id/sixth"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/dashed"
        android:textSize="20dp"
        android:layout_toRightOf="@id/fifth"
        android:layout_above="@id/number1">
    </TextView>

    <Button
        android:id="@+id/number1"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/number1"
        android:layout_alignLeft="@id/number6"
        android:layout_above="@id/number6"  />

    <Button
        android:id="@+id/number2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/number2"
        android:layout_alignLeft="@id/number7"
        android:layout_above="@id/number7"  />

    <Button
        android:id="@+id/number3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/number3"
        android:layout_alignLeft="@id/number8"
        android:layout_above="@id/number8"  />

    <Button
        android:id="@+id/number4"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/number4"
        android:layout_alignLeft="@id/number9"
        android:layout_above="@id/number9"  />

    <Button
        android:id="@+id/number5"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/number5"
        android:layout_alignLeft="@id/number0"
        android:layout_above="@id/number0" />


    <Button
        android:id="@+id/btn_delete"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="\u232b"
        android:textSize="20dp"
        android:layout_alignLeft="@id/btn_ok"
        android:layout_above="@id/btn_ok" />


    <Button
        android:id="@+id/number6"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="5dp"
        android:text="@string/number6"
        android:layout_alignParentBottom="true" />

    <Button
        android:id="@+id/number7"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="24dp"
        android:text="@string/number7"
        android:layout_toRightOf="@id/number6"
        android:layout_alignBottom="@id/number6"/>

    <Button
        android:id="@+id/number8"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="24dp"
        android:text="@string/number8"
        android:layout_toRightOf="@id/number7"
        android:layout_alignBottom="@id/number7" />

    <Button
        android:id="@+id/number9"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="24dp"
        android:text="@string/number9"
        android:layout_toRightOf="@id/number8"
        android:layout_alignBottom="@id/number8" />

    <Button
        android:id="@+id/number0"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="24dp"
        android:text="@string/number0"
        android:layout_toRightOf="@id/number9"
        android:layout_alignBottom="@id/number9" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="ok"
        android:layout_toRightOf="@id/number0"
        android:layout_alignBottom="@id/number0" />

</RelativeLayout>