<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/results" />

    <ListView
        android:id="@+id/results"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"
        android:divider="@color/orange"
        android:dividerHeight="2dp"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/first">
    </ListView>

    <TextView
        android:id="@+id/first"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/dashed"
        android:textSize="20dp"
        app:layout_constraintLeft_toRightOf="@id/number1"
        app:layout_constraintBottom_toTopOf="@id/number1">
    </TextView>

    <TextView
        android:id="@+id/second"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/dashed"
        android:textSize="20dp"
        app:layout_constraintLeft_toRightOf="@id/first"
        app:layout_constraintBottom_toTopOf="@id/number1">
    </TextView>

    <TextView
        android:id="@+id/third"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/dashed"
        android:textSize="20dp"
        app:layout_constraintLeft_toRightOf="@id/second"
        app:layout_constraintBottom_toTopOf="@id/number1">
    </TextView>

    <TextView
        android:id="@+id/fourth"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/dashed"
        android:textSize="20dp"
        app:layout_constraintLeft_toRightOf="@id/third"
        app:layout_constraintBottom_toTopOf="@id/number1">
    </TextView>

    <TextView
        android:id="@+id/fifth"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/dashed"
        android:textSize="20dp"
        app:layout_constraintLeft_toRightOf="@id/fourth"
        app:layout_constraintBottom_toTopOf="@id/number1">
    </TextView>

    <TextView
        android:id="@+id/sixth"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/dashed"
        android:textSize="20dp"
        app:layout_constraintLeft_toRightOf="@id/fifth"
        app:layout_constraintBottom_toTopOf="@id/number1">
    </TextView>

    <Button
        android:id="@+id/number1"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/number1"
        app:layout_constraintLeft_toLeftOf="@id/number6"
        app:layout_constraintBottom_toTopOf="@id/number6" />

    <Button
        android:id="@+id/number2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/number2"
        app:layout_constraintLeft_toLeftOf="@id/number7"
        app:layout_constraintBottom_toTopOf="@id/number7" />

    <Button
        android:id="@+id/number3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/number3"
        app:layout_constraintLeft_toLeftOf="@id/number8"
        app:layout_constraintBottom_toTopOf="@id/number8" />

    <Button
        android:id="@+id/number4"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/number4"
        app:layout_constraintLeft_toLeftOf="@id/number9"
        app:layout_constraintBottom_toTopOf="@id/number9" />

    <Button
        android:id="@+id/number5"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/number5"
        app:layout_constraintLeft_toLeftOf="@id/number0"
        app:layout_constraintBottom_toTopOf="@id/number0" />


    <Button
        android:id="@+id/btn_delete"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="\u232b"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="@id/btn_ok"
        app:layout_constraintBottom_toTopOf="@id/btn_ok" />


    <Button
        android:id="@+id/number6"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/number6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/number7"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="24dp"
        android:text="@string/number7"
        app:layout_constraintLeft_toRightOf="@id/number6"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/number8"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="24dp"
        android:text="@string/number8"
        app:layout_constraintLeft_toRightOf="@id/number7"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/number9"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="24dp"
        android:text="@string/number9"
        app:layout_constraintLeft_toRightOf="@id/number8"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/number0"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="24dp"
        android:text="@string/number0"
        app:layout_constraintLeft_toRightOf="@id/number9"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="ok"
        app:layout_constraintLeft_toRightOf="@id/number0"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>