<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_about"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_centerInParent="true"
        android:layout_above="@id/btn_about"
        />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:layout_centerInParent="true"
        android:layout_below="@id/btn_about"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:layout_centerInParent="true"
        android:layout_below="@id/btn_exit">
    </Spinner>

</RelativeLayout>