<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_about"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintBottom_toTopOf="@+id/btn_about"
        app:layout_constraintEnd_toEndOf="@+id/btn_about"
        app:layout_constraintStart_toStartOf="@+id/btn_about" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="@+id/btn_about"
        app:layout_constraintStart_toStartOf="@+id/btn_about"
        app:layout_constraintTop_toBottomOf="@+id/btn_about" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="@+id/btn_exit"
        app:layout_constraintStart_toStartOf="@+id/btn_exit"
        app:layout_constraintTop_toBottomOf="@+id/btn_exit">
    </Spinner>

</androidx.constraintlayout.widget.ConstraintLayout>
